Prevodjenje programskih jezika/sve2019/8_1/jan1_2019/parser.output
Grammar

    0 $accept: program $end

    1 program: naredba ';' program
    2        | %empty

    3 naredba: INT_T ID '=' izraz
    4        | INT_T ID
    5        | ID '=' izraz
    6        | PRINT_T '(' izraz ')'
    7        | PRINT_T '(' izraz ',' BROJ ')'
    8        | izraz EQ_T izraz
    9        | izraz NEQ_T izraz
   10        | LIST_T ID '=' lista

   11 izraz: izraz PLUS_T izraz
   12      | izraz MINUS_T izraz
   13      | izraz '*' izraz
   14      | izraz '/' izraz
   15      | izraz '%' izraz
   16      | izraz SHL_T izraz
   17      | izraz SHR_T izraz
   18      | izraz '&' izraz
   19      | izraz '^' izraz
   20      | izraz '|' izraz
   21      | '-' izraz
   22      | '~' izraz
   23      | '(' izraz ')'
   24      | ID
   25      | BROJ
   26      | ID '[' BROJ ']'

   27 lista: '[' elementi ']'

   28 elementi: elementi ',' broj
   29         | broj

   30 broj: BROJ
   31     | MINUS_T BROJ


Terminals, with rules where they appear

$end (0) 0
'%' (37) 15
'&' (38) 18
'(' (40) 6 7 23
')' (41) 6 7 23
'*' (42) 13
',' (44) 7 28
'-' (45) 21
'/' (47) 14
';' (59) 1
'=' (61) 3 5 10
'[' (91) 26 27
']' (93) 26 27
'^' (94) 19
'|' (124) 20
'~' (126) 22
error (256)
EQ_T (258) 8
NEQ_T (259) 9
SHL_T (260) 16
SHR_T (261) 17
PLUS_T (262) 11
MINUS_T (263) 12 31
UMINUS (264)
INT_T (265) 3 4
PRINT_T (266) 6 7
LIST_T (267) 10
BROJ (268) 7 25 26 30 31
ID (269) 3 4 5 10 24 26


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
program (31)
    on left: 1 2, on right: 0 1
naredba (32)
    on left: 3 4 5 6 7 8 9 10, on right: 1
izraz (33)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26, on right:
    3 5 6 7 8 9 11 12 13 14 15 16 17 18 19 20 21 22 23
lista (34)
    on left: 27, on right: 10
elementi (35)
    on left: 28 29, on right: 27 28
broj (36)
    on left: 30 31, on right: 28 29


State 0

    0 $accept: . program $end

    '~'      shift, and go to state 1
    INT_T    shift, and go to state 2
    PRINT_T  shift, and go to state 3
    LIST_T   shift, and go to state 4
    BROJ     shift, and go to state 5
    ID       shift, and go to state 6
    '('      shift, and go to state 7
    '-'      shift, and go to state 8

    $default  reduce using rule 2 (program)

    program  go to state 9
    naredba  go to state 10
    izraz    go to state 11


State 1

   22 izraz: '~' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 13


State 2

    3 naredba: INT_T . ID '=' izraz
    4        | INT_T . ID

    ID  shift, and go to state 14


State 3

    6 naredba: PRINT_T . '(' izraz ')'
    7        | PRINT_T . '(' izraz ',' BROJ ')'

    '('  shift, and go to state 15


State 4

   10 naredba: LIST_T . ID '=' lista

    ID  shift, and go to state 16


State 5

   25 izraz: BROJ .

    $default  reduce using rule 25 (izraz)


State 6

    5 naredba: ID . '=' izraz
   24 izraz: ID .
   26      | ID . '[' BROJ ']'

    '='  shift, and go to state 17
    '['  shift, and go to state 18

    $default  reduce using rule 24 (izraz)


State 7

   23 izraz: '(' . izraz ')'

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 19


State 8

   21 izraz: '-' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 20


State 9

    0 $accept: program . $end

    $end  shift, and go to state 21


State 10

    1 program: naredba . ';' program

    ';'  shift, and go to state 22


State 11

    8 naredba: izraz . EQ_T izraz
    9        | izraz . NEQ_T izraz
   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    EQ_T     shift, and go to state 26
    NEQ_T    shift, and go to state 27
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34


State 12

   24 izraz: ID .
   26      | ID . '[' BROJ ']'

    '['  shift, and go to state 18

    $default  reduce using rule 24 (izraz)


State 13

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz
   22      | '~' izraz .

    $default  reduce using rule 22 (izraz)


State 14

    3 naredba: INT_T ID . '=' izraz
    4        | INT_T ID .

    '='  shift, and go to state 35

    $default  reduce using rule 4 (naredba)


State 15

    6 naredba: PRINT_T '(' . izraz ')'
    7        | PRINT_T '(' . izraz ',' BROJ ')'

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 36


State 16

   10 naredba: LIST_T ID . '=' lista

    '='  shift, and go to state 37


State 17

    5 naredba: ID '=' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 38


State 18

   26 izraz: ID '[' . BROJ ']'

    BROJ  shift, and go to state 39


State 19

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz
   23      | '(' izraz . ')'

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34
    ')'      shift, and go to state 40


State 20

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz
   21      | '-' izraz .

    $default  reduce using rule 21 (izraz)


State 21

    0 $accept: program $end .

    $default  accept


State 22

    1 program: naredba ';' . program

    '~'      shift, and go to state 1
    INT_T    shift, and go to state 2
    PRINT_T  shift, and go to state 3
    LIST_T   shift, and go to state 4
    BROJ     shift, and go to state 5
    ID       shift, and go to state 6
    '('      shift, and go to state 7
    '-'      shift, and go to state 8

    $default  reduce using rule 2 (program)

    program  go to state 41
    naredba  go to state 10
    izraz    go to state 11


State 23

   20 izraz: izraz '|' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 42


State 24

   19 izraz: izraz '^' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 43


State 25

   18 izraz: izraz '&' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 44


State 26

    8 naredba: izraz EQ_T . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 45


State 27

    9 naredba: izraz NEQ_T . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 46


State 28

   16 izraz: izraz SHL_T . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 47


State 29

   17 izraz: izraz SHR_T . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 48


State 30

   11 izraz: izraz PLUS_T . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 49


State 31

   12 izraz: izraz MINUS_T . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 50


State 32

   13 izraz: izraz '*' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 51


State 33

   14 izraz: izraz '/' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 52


State 34

   15 izraz: izraz '%' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 53


State 35

    3 naredba: INT_T ID '=' . izraz

    '~'   shift, and go to state 1
    BROJ  shift, and go to state 5
    ID    shift, and go to state 12
    '('   shift, and go to state 7
    '-'   shift, and go to state 8

    izraz  go to state 54


State 36

    6 naredba: PRINT_T '(' izraz . ')'
    7        | PRINT_T '(' izraz . ',' BROJ ')'
   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34
    ')'      shift, and go to state 55
    ','      shift, and go to state 56


State 37

   10 naredba: LIST_T ID '=' . lista

    '['  shift, and go to state 57

    lista  go to state 58


State 38

    5 naredba: ID '=' izraz .
   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 5 (naredba)


State 39

   26 izraz: ID '[' BROJ . ']'

    ']'  shift, and go to state 59


State 40

   23 izraz: '(' izraz ')' .

    $default  reduce using rule 23 (izraz)


State 41

    1 program: naredba ';' program .

    $default  reduce using rule 1 (program)


State 42

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz
   20      | izraz '|' izraz .

    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 20 (izraz)


State 43

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   19      | izraz '^' izraz .
   20      | izraz . '|' izraz

    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 19 (izraz)


State 44

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   18      | izraz '&' izraz .
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 18 (izraz)


State 45

    8 naredba: izraz EQ_T izraz .
   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 8 (naredba)


State 46

    9 naredba: izraz NEQ_T izraz .
   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 9 (naredba)


State 47

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   16      | izraz SHL_T izraz .
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 16 (izraz)


State 48

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   17      | izraz SHR_T izraz .
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 17 (izraz)


State 49

   11 izraz: izraz . PLUS_T izraz
   11      | izraz PLUS_T izraz .
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 11 (izraz)


State 50

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   12      | izraz MINUS_T izraz .
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '*'  shift, and go to state 32
    '/'  shift, and go to state 33
    '%'  shift, and go to state 34

    $default  reduce using rule 12 (izraz)


State 51

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   13      | izraz '*' izraz .
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    $default  reduce using rule 13 (izraz)


State 52

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   14      | izraz '/' izraz .
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    $default  reduce using rule 14 (izraz)


State 53

   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   15      | izraz '%' izraz .
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    $default  reduce using rule 15 (izraz)


State 54

    3 naredba: INT_T ID '=' izraz .
   11 izraz: izraz . PLUS_T izraz
   12      | izraz . MINUS_T izraz
   13      | izraz . '*' izraz
   14      | izraz . '/' izraz
   15      | izraz . '%' izraz
   16      | izraz . SHL_T izraz
   17      | izraz . SHR_T izraz
   18      | izraz . '&' izraz
   19      | izraz . '^' izraz
   20      | izraz . '|' izraz

    '|'      shift, and go to state 23
    '^'      shift, and go to state 24
    '&'      shift, and go to state 25
    SHL_T    shift, and go to state 28
    SHR_T    shift, and go to state 29
    PLUS_T   shift, and go to state 30
    MINUS_T  shift, and go to state 31
    '*'      shift, and go to state 32
    '/'      shift, and go to state 33
    '%'      shift, and go to state 34

    $default  reduce using rule 3 (naredba)


State 55

    6 naredba: PRINT_T '(' izraz ')' .

    $default  reduce using rule 6 (naredba)


State 56

    7 naredba: PRINT_T '(' izraz ',' . BROJ ')'

    BROJ  shift, and go to state 60


State 57

   27 lista: '[' . elementi ']'

    MINUS_T  shift, and go to state 61
    BROJ     shift, and go to state 62

    elementi  go to state 63
    broj      go to state 64


State 58

   10 naredba: LIST_T ID '=' lista .

    $default  reduce using rule 10 (naredba)


State 59

   26 izraz: ID '[' BROJ ']' .

    $default  reduce using rule 26 (izraz)


State 60

    7 naredba: PRINT_T '(' izraz ',' BROJ . ')'

    ')'  shift, and go to state 65


State 61

   31 broj: MINUS_T . BROJ

    BROJ  shift, and go to state 66


State 62

   30 broj: BROJ .

    $default  reduce using rule 30 (broj)


State 63

   27 lista: '[' elementi . ']'
   28 elementi: elementi . ',' broj

    ','  shift, and go to state 67
    ']'  shift, and go to state 68


State 64

   29 elementi: broj .

    $default  reduce using rule 29 (elementi)


State 65

    7 naredba: PRINT_T '(' izraz ',' BROJ ')' .

    $default  reduce using rule 7 (naredba)


State 66

   31 broj: MINUS_T BROJ .

    $default  reduce using rule 31 (broj)


State 67

   28 elementi: elementi ',' . broj

    MINUS_T  shift, and go to state 61
    BROJ     shift, and go to state 62

    broj  go to state 69


State 68

   27 lista: '[' elementi ']' .

    $default  reduce using rule 27 (lista)


State 69

   28 elementi: elementi ',' broj .

    $default  reduce using rule 28 (elementi)
